[tool.poetry]
name = "phl-analysis"
version = "0.1.0"
description = ""
authors = ["Karim Boyd <karim.s.boyd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.6"
pandas = "1.5.3"
numpy = "1.24.3"
matplotlib = "3.7.1"
seaborn = "0.12.2"
jupyter = "1.0.0"
torch = "2.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
